﻿Legend:
! Breaking change
* Compatible change
- Bugfix
+ New feature
===============================================================================

~~~~~~~~~
* v2.4.0:
~~~~~~~~~

* KGySoft.Drawing.ImagingTools.exe
==================================
+ Targeting also .NET 5.0
- Fixing possible errors when closing forms while an async operation is still in progress.
* Smooth Zooming on/off affects also shrunk images (previously affected enlarged images only)
* API changes:
  * Members are annotated for using C# 8.0 nullable references

- KGySoft.Drawing.DebuggerVisualizers.dll
=========================================
- Fixing a possible IndexOutOfRangeException when debugging an animated GIF.
* Improved performance and reduced memory consumption when serializing and deserializing debugged objects.

* KGySoft.Drawing.DebuggerVisualizers.Package.dll
=================================================
* When ImagingTools is executed from Visual Studio Tools menu a new thread is created so the possible lagging of
  Visual Studio does not affect the performance of ImagingTools anymore.


~~~~~~~~~
+ v2.3.0:
~~~~~~~~~

+ KGySoft.Drawing.ImagingTools.exe
==================================
+ Key shortcuts for several commands
+ Improving the image viewer control performance for large images
+ Save/Load: Supporting saving/loading raw bitmap data, which preserves any pixel format
+ Color Settings:
  + Count Colors
+ New Edit Image drop down button
  + Rotate Left/Right
  + Resize Bitmap
  + Pixel Format/Quantizing/Dithering
  + Adjust Brightness/Contrast/Gamma
+ Tool strip items can be clicked even if the container form is not activated
+ API changes:
  + ViewModelFactory class:
    + New CreateResizeBitmap method
    + New CreateAdjustColorSpace method
    + New CreateCountColors method
    + New CreateAdjustBrightness method
    + New CreateAdjustContrast method
    + New CreateAdjustGamma method


~~~~~~~~~
* v2.2.1:
~~~~~~~~~

* KGySoft.Drawing.ImagingTools.exe